versions/v2.8/modules/en/pages/cluster-deployment/hosted-kubernetes/gke/gke.adoc
= Creating a GKE Cluster

== Prerequisites

Some setup in Google Kubernetes Engine is required.

=== Service Account Token

Create a service account using https://console.cloud.google.com/projectselector/iam-admin/serviceaccounts[Google Kubernetes Engine]. GKE uses this account to operate your cluster. Creating this account also generates a private key used for authentication.

The service account requires the following roles:

* *Compute Viewer:* `roles/compute.viewer`
* *Project Viewer:* `roles/viewer`
* *Kubernetes Engine Admin:* `roles/container.admin`
* *Service Account User:* `roles/iam.serviceAccountUser`

https://cloud.google.com/compute/docs/access/create-enable-service-accounts-for-instances[Google Documentation: Creating and Enabling Service Accounts]

For help obtaining a private key for your service account, refer to the Google cloud documentation https://cloud.google.com/iam/docs/creating-managing-service-account-keys#creating_service_account_keys[here.] You will need to save the key in JSON format.

=== Google Project ID

Your cluster will need to be part of a Google Project.

To create a new project, refer to the Google cloud documentation https://cloud.google.com/resource-manager/docs/creating-managing-projects#creating_a_project[here.]

To get the project ID of an existing project, refer to the Google cloud documentation https://cloud.google.com/resource-manager/docs/creating-managing-projects#identifying_projects[here.]

== Provisioning a GKE Cluster

[CAUTION]
====

Deploying to GKE will incur charges.
====


=== 1. Create a Cloud Credential

. Click *☰ > Cluster Management*.
. In the left navigation bar, click *Cloud Credentials*.
. Click *Create*.
. Enter a name for your Google cloud credentials.
. In the *Service Account* text box, paste your service account private key JSON, or upload the JSON file.
. Click *Create*.

*Result:* You have created credentials that Rancher will use to provision the new GKE cluster.

=== 2. Create the GKE Cluster

Use Rancher to set up and configure your Kubernetes cluster. To successfully create a GKE cluster with Rancher, your GKE must be in Standard mode. GKE has two modes of operation when creating a Kubernetes cluster, Autopilot and Standard mode. The cluster configuration for Autopilot mode has restrictions on editing the kube-system namespace. However, Rancher needs to create resources in the kube-system namespace during installation. As a result, you will not be able to create a GKE cluster in Autopilot mode. For more information about the difference between GKE Autopilot mode and Standard mode, visit https://cloud.google.com/kubernetes-engine/docs/resources/autopilot-standard-feature-comparison[Compare GKE Autopilot and Standard.]

. Click *☰ > Cluster Management*.
. On the *Clusters* page, click *Create*.
. Click *Google GKE*.
. Enter a *Cluster Name*.
. Optional: Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
. Optional: Add Kubernetes https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/[labels] or https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/[annotations] to the cluster.
. Enter your Google project ID and your Google cloud credentials.
. Fill out the rest of the form. For help, refer to the xref:configuration.adoc[GKE cluster configuration reference.]
. Click *Create*.

*Result:* You have successfully deployed a GKE cluster.

Your cluster is created and assigned a state of *Provisioning*. Rancher is standing up your cluster.

You can access your cluster after its state is updated to *Active*.

*Active* clusters are assigned two Projects:

* `Default`, containing the `default` namespace
* `System`, containing the `cattle-system`, `ingress-nginx`, `kube-public`, and `kube-system` namespaces

== Private Clusters

Private GKE clusters are supported. Note: This advanced setup can require more steps during the cluster provisioning process. For details, see xref:private-clusters.adoc[this section.]

== Configuration Reference

For details on configuring GKE clusters in Rancher, see xref:configuration.adoc[this page.]

== Updating Kubernetes Version

The Kubernetes version of a cluster can be upgraded to any version available in the region or zone for the GKE cluster. Upgrading the master Kubernetes version does not automatically upgrade worker nodes. Nodes can be upgraded independently.

[NOTE]
====

GKE has removed basic authentication in 1.19+. In order to upgrade a cluster to 1.19+, basic authentication must be disabled in the Google Cloud. Otherwise, an error will appear in Rancher when an upgrade to 1.19+ is attempted. You can follow the https://cloud.google.com/kubernetes-engine/docs/how-to/api-server-authentication#disabling_authentication_with_a_static_password[Google documentation]. After this, the Kubernetes version can be updated to 1.19+ via Rancher.
====


== Syncing

The GKE provisioner can synchronize the state of a GKE cluster between Rancher and the provider. For an in-depth technical explanation of how this works, see xref:../sync-clusters.adoc[Syncing.]

For information on configuring the refresh interval, see link:configuration.adoc#configuring-the-refresh-interval[this section.]

== Programmatically Creating GKE Clusters

The most common way to programmatically deploy GKE clusters through Rancher is by using the Rancher2 Terraform provider. The documentation for creating clusters with Terraform is https://registry.terraform.io/providers/rancher/rancher2/latest/docs/resources/cluster[here.]
